--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,20 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html{
+  font-size: 100%;
+}
+@media(max-width:400px) {
+  html{
+    font-size: 45%;
+  }
+}
+@media(max-width:1000px) {
+  html {
+    font-size: 55%;
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
