--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,5 @@
-@import './common.css';
-@import './header.css';
-@import './home.css';
+@import "./common.css";
+@import "./header.css";
+@import "./home.css";
+@import "./footer.css";
+@import "./bookings.css";
